PKG-Related tweaks / improvements
Just a couple of small changes related to packaging.  The index file
has been renamed (it isn't signed so giving it a 'gpg' extension was
just silly). Also, the FTP site hasn't existed for years so removed
that from the list of download sites.

	* etc/Makefile.am (dist_etc_DATA): 'package-index.LATEST.gpg' ->
	'package-index'

	* lisp/package-get.el (package-get-base-filename): Rename to
	'package-index'
	(package-get-download-sites): Comment out the FTP site.

	* etc/package-index.LATEST.gpg: Removed.

	* etc/package-index: New.  Replaces above.

Signed-off-by: Steve Youngs <steve@sxemacs.org>

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -56,8 +56,8 @@ dist_etc_DATA = BETA CHARSETS CODING-STANDARDS CODINGS			\
 	TUTORIAL.ko TUTORIAL.no TUTORIAL.pl TUTORIAL.ro TUTORIAL.ru	\
 	TUTORIAL.se TUTORIAL.th						\
 	XKeysymDB codenames emacskeys.sco emacsstrs.sco gnuserv.README	\
-	package-index.LATEST.gpg refcard.tex rgb.txt		\
-	sample.Xdefaults sample.init.el
+	package-index refcard.tex rgb.txt sample.Xdefaults              \
+	sample.init.el
 
 dist_desktop_DATA = sxemacs.desktop
 
